<resources>
    <string name="app_name">AppNokia</string>
    <string name="user_login">User Name</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="site">Sitio:</string>
    <string name="totalActivities">total Activities: </string>
    <string name="status">Status: </string>
    <string name="tab_new_order">NEW WORK ORDERS</string>
    <string name="tab_progress">IN PROGRESS</string>
    <string name="bonton_task_to_be">Finish</string>
    <string name="activivty">activity:</string>
    <string name="day_working">Day Working On:</string>
    <string name="date">Date Started:</string>
    <string name="wo_orders">Wo Orders</string>
    <string name="my_sites">My Sites</string>
    <string name="documentacion">Documentacion</string>
    <string name="chat">Chat</string>
    <string name="total_new">Total new</string>
    <string name="percentage">%</string>
    <string name="Wo_sub_task">Wo:</string>
    <string name="date_sub_task">date:</string>
    <string name="total_sub_task">total:</string>

</resources>
